--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-CN">
 
 <head>
 
@@ -32,7 +32,133 @@
 </head>
 
 <body>
+    <h1>统一建模语言理论测试</h1>
 
+    <table>
+        <tr>
+            <td>考试科目：</td>
+            <td>统一建模语言</td>
+            <td>时间：</td>
+            <td>100分钟</td>
+            <td>得分：</td>
+            <td>100分</td>
+        </tr>
+        <tr>
+            <td>班级</td>
+            <td>
+                <input type="text" placeholder="1班">
+            </td>
+            <td>学号</td>
+            <td>
+                <input type="text" placeholder="001">
+            </td>
+            <td>姓名</td>
+            <td>
+                <input type="text" placeholder="王小">
+            </td>
+        </tr>
+    </table>
+
+    <div>
+        <p class="dati">一、填空题</p>
+        <p class="xiaoti">
+            <span>1.UML中文全称：</span>
+            <input type="text" placeholder="统一建模语言">
+        </p>
+        <p class="xiaoti">
+            <span>2.对象最突出特征：</span>
+            <input type="text" placeholder="封装性">
+            <input type="text" placeholder="继承性">
+            <input type="text" placeholder="多态">
+        </p>
+    </div>
+
+    <div>
+        <p class="dati">二、选择题</p>
+        <p class="xiaoti">
+            1.UML与软件工程关系
+        </p>
+        <form>
+            <input type="radio" class="xuanxiang" name="name">(A)aaaaaaa
+            <br>
+            <input type="radio" class="xuanxiang" name="name">(B)bbbbbbb
+            <br>
+            <input type="radio" class="xuanxiang" name="name">(C)ccccccc
+            <br>
+            <input type="radio" class="xuanxiang" name="name">(D)ddddddd
+            <br>
+        </form>
+        <p class="xiaoti">
+            2.Java语言继承
+        </p>
+        <form>
+            <input type="radio" class="xuanxiang" name="name">(A)aaaaaaa
+            <br>
+            <input type="radio" class="xuanxiang" name="name">(B)bbbbbbb
+            <br>
+            <input type="radio" class="xuanxiang" name="name">(C)ccccccc
+            <br>
+            <input type="radio" class="xuanxiang" name="name">(D)ddddddd
+            <br>
+        </form>
+
+    </div>
+    <div>
+        <p class="dati">三、多选题</p>
+
+        <p class="xiaoti">
+            1.UML与软件工程关系
+        </p>
+        <form>
+            <input type="checkbox" class="xuanxiang" name="name">(A)aaaaaaa
+            <br>
+            <input type="checkbox" class="xuanxiang" name="name">(B)bbbbbbb
+            <br>
+            <input type="checkbox" class="xuanxiang" name="name">(C)ccccccc
+            <br>
+            <input type="checkbox" class="xuanxiang" name="name">(D)ddddddd
+            <br>
+        </form>
+        <p class="xiaoti">
+            2.Java语言继承
+        </p>
+        <form>
+            <input type="checkbox" class="xuanxiang" name="name">(A)aaaaaaa
+            <br>
+            <input type="checkbox" class="xuanxiang" name="name">(B)bbbbbbb
+            <br>
+            <input type="checkbox" class="xuanxiang" name="name">(C)ccccccc
+            <br>
+            <input type="checkbox" class="xuanxiang" name="name">(D)ddddddd
+            <br>
+        </form>
+
+
+    </div>
+    <div>
+        <p class="dati">四、判断题</p>
+
+        <p class="xiaoti">
+            <span>1.用例图是否是否是否</span>
+            <input type="radio" name="name">✅
+            <input type="radio" name="name">❎
+        </p>
+
+        <p class="xiaoti">
+            <span>2.用例图是否是否是否</span>
+            <input type="radio" name="name">✅
+            <input type="radio" name="name">❎
+        </p>
+    </div>
+
+    <div>
+        <p class="dati">五、简答题</p>
+
+        <p class="xiaoti">1.简述一下</p>
+
+        <textarea class="xiaoti" rows="20" cols="100">简答题简答题简答题简答题简答题简答题简答题简答题简答题简答题简答题简答题简答题简答题简答题简答题简答题简答题简答题简答题简答题简答题
+        </textarea>
+    </div>
     <!-- Navigation -->
     <nav class="navbar navbar-default navbar-custom navbar-fixed-top">
         <div class="container-fluid">
