--- a/index.html
+++ b/index.html
@@ -78,24 +78,49 @@
                 <p>姓名</p>
             </div>
             <div class="col-md-2">
+                <p>姓名</p>
+            </div>
+            <div class="col-md-2">
                 <input type="text" placeholder="王小">
             </div>
         </div>
     </div>
 
 
-    <div>
-        <p class="dati">一、填空题</p>
-        <p class="xiaoti">
+    <div class="row">
+        <div class="col-md-10">
+            <p class="dati">一、填空题</p>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-md-4 col-md-offset-1">
             <span>1.UML中文全称：</span>
+
+        </div>
+        <div class="col-md-2">
             <input type="text" placeholder="统一建模语言">
-        </p>
-        <p class="xiaoti">
+
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-md-4 col-md-offset-1">
             <span>2.对象最突出特征：</span>
+
+        </div>
+        <div class="col-md-1">
             <input type="text" placeholder="封装性">
-            <input type="text" placeholder="继承性">
-            <input type="text" placeholder="多态">
-        </p>
+
+        </div>
+        <div class="col-md-1">
+            <input type="text" placeholder="封装性">
+
+        </div>
+        <div class="col-md-1">
+            <input type="text" placeholder="封装性">
+
+        </div>
     </div>
 
     <div>
