--- a/index.html
+++ b/index.html
@@ -88,6 +88,15 @@
 
 
     <div class="row">
+        <div class="col-md-1">
+            <p>班级</p>
+        </div>
+        <div class="col-md-2">
+            <input type="text" placeholder="1班">
+        </div>
+    </div>
+
+    <div class="row">
         <div class="col-md-10">
             <p class="dati">一、填空题</p>
         </div>
@@ -175,14 +184,14 @@
     </div>
 
     <div class="row">
-        <div class="col-md-4 col-md-offset-1" style="margin-left: 10px;">
+        <div class="col-md-4 col-md-offset-2" style="margin-left: 10px;">
             <input type="radio" name="name">(A)aaaaaaa
 
         </div>
     </div>
 
     <div class="row">
-        <div class="col-md-4 col-md-offset-1" style="margin-left: 10px;">
+        <div class="col-md-4 col-md-offset-2" style="margin-left: 10px;">
             <input type="radio" name="name">(B)bbbbbbb
 
         </div>
