--- a/index.html
+++ b/index.html
@@ -63,38 +63,26 @@
 
         <div class="row">
             <div class="col-md-1">
-                <p>班级</p>
+                <span>班级</span>
             </div>
             <div class="col-md-2">
                 <input type="text" placeholder="1班">
             </div>
             <div class="col-md-1">
-                <p>学号</p>
+                <span>学号</span>
             </div>
-            <div class="col-md-1">
+            <div class="col-md-2">
                 <input type="text" placeholder="001">
             </div>
             <div class="col-md-1">
-                <p>姓名</p>
+                <span姓名</span>
             </div>
             <div class="col-md-2">
-                <p>姓名</p>
-            </div>
-            <div class="col-md-1">
                 <input type="text" placeholder="王小">
             </div>
         </div>
     </div>
 
-
-    <div class="row">
-        <div class="col-md-1">
-            <p>班级</p>
-        </div>
-        <div class="col-md-2">
-            <input type="text" placeholder="1班">
-        </div>
-    </div>
 
     <div class="row">
         <div class="col-md-10">
@@ -148,7 +136,7 @@
     </div>
 
     <div class="row">
-        <div class="col-md-4 col-md-offset-1" style="margin-left: 10px;">
+        <div class="col-md-4 col-md-offset-1">
             <input type="radio" name="name">(A)aaaaaaa
 
         </div>
