--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 <input type="text" placeholder="001">
             </div>
             <div class="col-md-1">
-                <span姓名</span>
+                <span>姓名</span>
             </div>
             <div class="col-md-2">
                 <input type="text" placeholder="王小">
@@ -143,21 +143,21 @@
     </div>
 
     <div class="row">
-        <div class="col-md-4 col-md-offset-1" style="margin-left: 10px;">
+        <div class="col-md-4 col-md-offset-1">
             <input type="radio" name="name">(B)bbbbbbb
 
         </div>
     </div>
 
     <div class="row">
-        <div class="col-md-4 col-md-offset-1" style="margin-left: 10px;">
+        <div class="col-md-4 col-md-offset-1">
             <input type="radio" name="name">(C)ccccccc
 
         </div>
     </div>
 
     <div class="row">
-        <div class="col-md-4 col-md-offset-1" style="margin-left: 10px;">
+        <div class="col-md-4 col-md-offset-1">
             <input type="radio" name="name">(D)ddddddd
 
         </div>
@@ -172,28 +172,28 @@
     </div>
 
     <div class="row">
-        <div class="col-md-4 col-md-offset-2" style="margin-left: 10px;">
+        <div class="col-md-4 col-md-offset-2" >
             <input type="radio" name="name">(A)aaaaaaa
 
         </div>
     </div>
 
     <div class="row">
-        <div class="col-md-4 col-md-offset-2" style="margin-left: 10px;">
+        <div class="col-md-4 col-md-offset-2" >
             <input type="radio" name="name">(B)bbbbbbb
 
         </div>
     </div>
 
     <div class="row">
-        <div class="col-md-4 col-md-offset-1" style="margin-left: 10px;">
+        <div class="col-md-4 col-md-offset-1" >
             <input type="radio" name="name">(C)ccccccc
 
         </div>
     </div>
 
     <div class="row">
-        <div class="col-md-4 col-md-offset-1" style="margin-left: 10px;">
+        <div class="col-md-4 col-md-offset-1" >
             <input type="radio" name="name">(D)ddddddd
 
         </div>
@@ -214,28 +214,28 @@
     </div>
 
     <div class="row">
-        <div class="col-md-4 col-md-offset-1" style="margin-left: 10px;">
+        <div class="col-md-4 col-md-offset-1" >
             <input type="checkbox" name="name">(A)aaaaaaa
 
         </div>
     </div>
 
     <div class="row">
-        <div class="col-md-4 col-md-offset-1" style="margin-left: 10px;">
+        <div class="col-md-4 col-md-offset-1" >
             <input type="checkbox" name="name">(B)bbbbbbb
 
         </div>
     </div>
 
     <div class="row">
-        <div class="col-md-4 col-md-offset-1" style="margin-left: 10px;">
+        <div class="col-md-4 col-md-offset-1" >
             <input type="checkbox" name="name">(C)ccccccc
 
         </div>
     </div>
 
     <div class="row">
-        <div class="col-md-4 col-md-offset-1" style="margin-left: 10px;">
+        <div class="col-md-4 col-md-offset-1" >
             <input type="checkbox" name="name">(D)ddddddd
 
         </div>
@@ -252,28 +252,28 @@
     </div>
 
     <div class="row">
-        <div class="col-md-4 col-md-offset-1" style="margin-left: 10px;">
+        <div class="col-md-4 col-md-offset-1" >
             <input type="checkbox" name="name">(A)aaaaaaa
 
         </div>
     </div>
 
     <div class="row">
-        <div class="col-md-4 col-md-offset-1" style="margin-left: 10px;">
+        <div class="col-md-4 col-md-offset-1" >
             <input type="checkbox" name="name">(B)bbbbbbb
 
         </div>
     </div>
 
     <div class="row">
-        <div class="col-md-4 col-md-offset-1" style="margin-left: 10px;">
+        <div class="col-md-4 col-md-offset-1" >
             <input type="checkbox" name="name">(C)ccccccc
 
         </div>
     </div>
 
     <div class="row">
-        <div class="col-md-4 col-md-offset-1" style="margin-left: 10px;">
+        <div class="col-md-4 col-md-offset-1" >
             <input type="checkbox" name="name">(D)ddddddd
 
         </div>
